# Vant

./: Credits.md  EXAMPLES.md  README.md  Test.vant
Vant/: CMakeLists.txt  Main.cpp  Vant.h  Vant.rc  Vant.vcxproj  Vant.vcxproj.filters  VantInstaller.iss  Vant_Boost_x64.props  Vant_builtin.h  anyops.h  eval.cpp  eval.h  strops.cpp
Vant/cmake/: FindSDL2_ttf.cmake
compilator/: Compilator.java
templates/: hello_world.vant
vant/: Interpreter.java  Vant.java  run.ts
vant/lexer/: Lexer.java
vant/libraries/: File.vant  Intent.vant  Js.vant  Key.vant
